2009-12-09  Donal K. Fellows  <dkf@users.sf.net>

	* generic/tkColor.c (Tk_GetColorByValue): [Bug 2911570]: Ensure that
	hash keys of color values are zeroed first, so that they hash properly
	on 64-bit systems (where X structures are not tightly packed).

2009-12-08  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* unix/tkUnixWm.c: [Bug 2864685]: Backported window manager hinting
			   update from HEAD

2009-12-06  Benjamin Riefenstahl  <b.riefenstahl@turtle-trading.net>

	* macosx/tkMacOSXFont.c (GetFontFamilyName): [Bug 2548661]: Merge fix
	from HEAD (1.44).

2009-12-03  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* library/ttk/xpTheme.tcl:    Fix selection of treeview rows on
	* library/ttk/vistaTheme.tcl: Windows XP and Vista.

2009-12-02  Jan Nijtmans  <nijtmans@users.sf.net>

	* doc/GetHINSTANCE.3:	Correct mentioned header file
	* win/tkWinInt.h:	[Bugs 220600, 220690]: Make TkWinChildProc
	* generic/tkInt.decls:	available in private stub table.
	* generic/tkIntPlatDecls.h: (regenerated)
	* generic/tkStubInit.c:	(regenerated)

2009-11-25  Stuart Cassoff <stwo@users.sf.net>

	* unix/tcl.m4:		[Patch 2892871]: Remove unneeded
	*			AC_STRUCT_TIMEZONE.
	* unix/configure:	Regenerated with autoconf-2.59.

2009-11-24  Donal K. Fellows  <dkf@users.sf.net>

	* unix/tkUnixWm.c (WmIconphotoCmd): [Bug 2902814]: Use the correct
	type for the array of data passed into X. It's wrong, but "right"
	because of a mistake in the X11 specification.

2009-11-22  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tests/winWm.test: [Bug 2899949]: Make sure the window is still
	* win/tkWinWm.c:    present when handling delayed activation

2009-11-13  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tests/winDialog.test: [Bug 2307837]: Backported fix for running
	* win/tkWinTest.c:      dialog tests on non-English locales

2009-11-12  Don Porter  <dgp@users.sourceforge.net>

	*** 8.5.8 TAGGED FOR RELEASE ***

	* changes:	Updated for 8.5.8 release.
